fixed welcome message paragraphs on mobile

--- a/resource/stylesheets/custom/_today.scss
+++ b/resource/stylesheets/custom/_today.scss
@@ -1,6 +1,6 @@
 @import "../../../../../../../var/lib/gems/1.9.1/gems/compass-core-1.0.1/stylesheets/compass/css3/flexbox";
 
-.today {
+.today, .welcome {
 
   h2 {
 	border-bottom: $card-border;
